[package]
name = "join-proxy-client"
version = "0.0.1"
edition = "2024"

[lib]
name = "join_proxy_client"
path = "src/lib.rs"

[[example]]
name = "test"
path = "examples/test.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
url = "2.4"
ic-cdk = "0.18.7"
candid = "0.10.19"
ic-certified-map = "0.4.1"
base64 = "0.22.1"
